Add vegan field and add new docs
